--- a/src/app/shared/carrusel/carrusel.component.html
+++ b/src/app/shared/carrusel/carrusel.component.html
@@ -9,7 +9,7 @@
       class="carousel-item float-left w-full"
     >
       <div
-        class="container mx-auto flex px-28 py-16 md:flex-row flex-col items-center bg-[url('./assets/image_blur_bg.jpg')] bg-options bg-fixed">
+        class="container mx-auto flex px-4 py-16 md:flex-row flex-col items-center bg-[url('./assets/image_blur_bg.jpg')] bg-options bg-fixed">
         <!-- ============================================================== -->
         <!-- Poster de la película -->
         <!-- ============================================================== -->
@@ -26,12 +26,12 @@
         <!-- ============================================================== -->
         <!-- Información de la película -->
         <!-- ============================================================== -->
-        <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center lg:pr-4">
+        <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center lg:pr-28 md:pr-16">
           <div class="backdrop-blur-xl bg-black/50 rounded px-2 mb-3 shadow-sm shadow-white/60 wow animate__animated animate__fadeIn">
             <h1 class="title-font md:text-3xl text-base mb-3 line-clamp-1 sm:line-clamp-3 font-semibold text-white wow animate__animated animate__pulse">
               {{ movie.original_title }}
             </h1>
-            <p class="leading-relaxed line-clamp-2 sm:line-clamp-2 md:line-clamp-4 text-white text-sm wow animate__animated animate__fadeIn">
+            <p class="leading-relaxed line-clamp-2 sm:line-clamp-2 md:line-clamp-4 text-white text-left text-sm wow animate__animated animate__fadeIn">
               {{ movie.overview }}
             </p>
           </div>
